# multisearch

./: Dockerfile  README.md  db.json  docker-compose.yml  es.py  pyproject.toml
books/: admin.py  models.py  schema.py  urls.py
books/migrations/: 0001_initial.py  0002_auto_20220727_2133.py  0003_auto_20220727_2142.py
core/: schema.py  settings.py  urls.py
documents/: admin.py  es.py  exceptions.py  models.py  schema.py
documents/migrations/: 0001_initial.py  0002_auto_20220801_1059.py
users/: admin.py  models.py  schema.py  users.json
users/migrations/: 0001_initial.py  0002_auto_20220801_1357.py
