[tool.poetry]
name = "multisearch"
version = "0.1.0"
description = ""
authors = ["Alexander Sidorov <sidai@bk.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.1"
graphene-django = "^2.15.0"
django-graphql-auth = "^0.3.16"
elasticsearch-dsl = "^7.4.0"
django-elasticsearch-dsl = "^7.2.2"
python-dotenv = "^0.20.0"



[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
